# vector-db

./: .gitignore  README.md  pyproject.toml
examples/: rag.ipynb
src/: Dockerfile  exceptions.py  pyproject.toml  server.py
src/api/: dependency.py
src/api/routes/: chunk_router.py  document_router.py  library_router.py
src/api/schemas/: __init__.py  chunk.py  documents.py  library.py  metadata.py
src/tests/api/: README.md  conftest.py  library_test.py
src/utils/: embed.py  index.py  knn.py  text_splitter.py
src/vector_db/: __init__.py  chunk.py  database.py  document.py  library.py  metadata.py
src/vector_db-chart/: Chart.yaml  values.yaml
src/vector_db-chart/templates/: deployment.yaml
src/vector_db/index/: __init__.py  base.py  collections_index.py  flatl2.py  ivf.py  lsh.py  types.py
