[tool.poetry]
name = "vector-db"
version = "0.1.0"
description = "A simple vector database"
authors = ["farhan0167 <afi225@nyu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.12"}
uvicorn = "^0.34.0"
pydantic = "^2.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
