[tool.poetry]
name = "vector-db"
version = "0.1.0"
description = "A simple vector database"
authors = ["farhan0167 <afi225@nyu.edu>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.12"}
uvicorn = "^0.34.0"
pydantic = "^2.10.6"
cohere = "^5.14.0"
pytest = "^8.3.5"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
